--- a/app/less/paint.less
+++ b/app/less/paint.less
@@ -1,16 +1,17 @@
 .paint__container {
   height: 100vh;
   width: 100vw;
-  //background: url(../img/dest/layergrey.webp) center center no-repeat no-repeat;
+  background: url(../img/dest/paper_back.webp) center center no-repeat no-repeat;
   background-size: cover;
   overflow: hidden;
 
   .paint__wrap {
-    transform: perspective(1200px) rotateY(0px);
+    transform: perspective(1200px) translateZ(0px) translateY(0px) rotateX(0) rotateY(0) rotateZ(0);
   }
 
-    .paint {
+  .paint {
     position: relative;
+    z-index: 10;
     display: block;
     margin: 100px auto 0;
     /*width: 1024px;
@@ -20,11 +21,10 @@
     background: url(../img/dest/fraim.webp) center center no-repeat no-repeat;
     background-size: cover;
     transform-style: preserve-3d;
-    transform: perspective(1200px) translateZ(100px) translateY(0px);
+    transform: perspective(1200px) translateZ(-300px) translateY(0px) rotateX(0) rotateY(0) rotateZ(0);
     overflow: hidden;
     box-shadow: 0 0 20px #7f7f7f;
-    //animation: linear 3s swing_room;
-    perspective-origin: 30px;
+    animation: linear 4s swing_room forwards;
   }
 
   .paint__img {
@@ -42,302 +42,143 @@
   // First horizon
   .people1 {
     z-index: 40;
-    transform: perspective(1200px) translateZ(-1128px) translateX(170px) translateY(552px);
+    transform: perspective(1200px) translateZ(-2128px) translateX(-270px) translateY(552px);
     filter: brightness(0.5);
+    animation: ease-in-out turn_left_people1 6s forwards;
+    animation-delay: 1.5s;
   }
 
   .house3 {
     z-index: 40;
-    transform: perspective(1200px) translateZ(-2300px) translateX(-890px) translateY(35px);
-    animation: ease-in-out infinite turn_left_house3 2s;
+    transform: perspective(1200px) translateZ(-2300px) translateX(-1210px) translateY(35px);
+    animation: ease-in-out turn_left_house3 6s forwards;
+    animation-delay: 1.5s;
   }
 
   .house1 {
     z-index: 40;
-    transform: perspective(1200px) translateZ(-1450px) translateX(669px) translateY(167px);
-    animation: ease-in-out infinite turn_left_house1 2s;
+    transform: perspective(1200px) translateZ(-1450px) translateX(900px) translateY(167px);
+    animation: ease-in-out turn_left_house1 6s forwards;
+    animation-delay: 1.5s;
   }
 
   .cloud1 {
     z-index: 40;
-    transform: perspective(1200px) translateZ(-540px) translateX(515px) translateY(-150px);
-    animation: ease-in-out infinite turn_left_cloud1 15s;
+    transform: perspective(1200px) translateZ(-540px) translateX(915px) translateY(-150px);
+    animation: ease-in-out turn_left_cloud1 6s forwards;
+    animation-delay: 1.5s;
   }
 
   .balloon2 {
     z-index: 40;
     transform: perspective(1200px) translateZ(-600px) translateX(930px) translateY(175px);
-    animation: ease-in-out infinite turn_left_balloon2 6s;
+    animation: ease-in-out turn_left_balloon2 8s;
+    animation-delay: 1.5s;
   }
 
   // Second horizon
   .birds {
     z-index: 30;
-    transform: perspective(1200px) translateZ(-3400px) translateX(710px) translateY(-90px);
-    animation: ease-in-out infinite turn_left_birds 7s;
+    transform: perspective(1200px) translateZ(-1400px) translateX(1510px) translateY(-90px) rotateY(-10deg);
+    animation: ease-in-out turn_left_birds 6s forwards;
+    animation-delay: 3s;
   }
 
   .cloud4 {
     z-index: 30;
-    transform: perspective(1200px) translateZ(-2500px) translateX(-770px) translateY(-230px);
-    animation: ease-in-out infinite turn_left_cloud4 15s;
+    transform: perspective(1200px) translateZ(-2500px) translateX(-1470px) translateY(-230px) rotateY(0deg);
+    animation: ease-in-out turn_left_cloud4 6s forwards;
+    animation-delay: 3s;
   }
 
   .people2 {
     z-index: 30;
-    transform: perspective(1200px) translateZ(-4120px) translateX(177px) translateY(618px);
+    transform: perspective(1200px) translateZ(-5120px) translateX(-277px) translateY(518px);
     filter: brightness(0.5);
+    animation: ease-in-out turn_left_people2 6s forwards;
+    animation-delay: 3s;
   }
 
   .house2 {
     z-index: 30;
-    transform: perspective(1200px) translateZ(-2500px) translateX(-619px) translateY(110px);
-    animation: ease-in-out infinite turn_left_house2 2s;
+    transform: perspective(1200px) translateZ(-2500px) translateX(-819px) translateY(110px);
+    animation: ease-in-out turn_left_house2 6s forwards;
+    animation-delay: 3s;
   }
 
   .house4 {
     z-index: 30;
-    transform: perspective(1200px) translateZ(-4000px) translateX(700px) translateY(147px);
-    animation: ease-in-out infinite turn_left_house4 2s;
+    transform: perspective(1200px) translateZ(-4000px) translateX(1130px) translateY(147px);
+    animation: ease-in-out turn_left_house4 6s forwards;
+    animation-delay: 3s;
   }
 
   .balloon1 {
     z-index: 30;
     transform: perspective(1200px) translateZ(-1200px) translateX(-83px) translateY(186px);
-    animation: ease-in-out infinite turn_left_balloon1 6s;
+    animation: ease-in-out turn_left_balloon1 8s;
+    animation-delay: 3s;
   }
 
   // Third horizon
   .people4 {
     z-index: 20;
-    transform: perspective(1200px) translateZ(-6100px) translateX(593px) translateY(508px);
+    transform: perspective(1200px) translateZ(-7100px) translateX(1453px) translateY(398px);
     filter: brightness(0.5);
+    animation: ease-in-out turn_left_people4 6s forwards;
+    animation-delay: 5s;
   }
 
   .demon {
     z-index: 20;
-    transform: perspective(1200px) translateZ(-3600px) translateX(536px) translateY(126px);
+    transform: perspective(1200px) translateZ(-6900px) translateX(1276px) translateY(326px) rotateY(45deg);
+    animation: ease-in-out turn_left_demon 6s forwards;
+    animation-delay: 5s;
   }
 
   .tower {
     z-index: 20;
-    transform: perspective(1200px) translateZ(-9000px) translateX(576px) translateY(-226px);
+    transform: perspective(1200px) translateZ(-9000px) translateX(1576px) translateY(-226px) skewX(0deg);
+    animation: ease-in-out turn_left_tower 6s forwards;
+    animation-delay: 5s;
   }
 
   .house5 {
     z-index: 20;
-    transform: perspective(1200px) translateZ(-7600px) translateX(-600px) translateY(62px);
-    animation: ease-in-out infinite turn_left_house5 2s;
+    transform: perspective(1200px) translateZ(-7600px) translateX(-1300px) translateY(62px);
+    animation: ease-in-out turn_left_house5 6s forwards;
+    animation-delay: 5s;
   }
+
 
   .people3 {
     z-index: 20;
     transform: perspective(1200px) translateZ(-14900px) translateX(118px) translateY(414px) rotateY(0deg);
     filter: brightness(0.5);
-    animation: ease-in-out turn_left_people3 10s forwards;
+    animation: ease-in-out turn_left_people3 6s forwards;
+    animation-delay: 8s;
   }
 
   // Forth horizon
   .castle {
     z-index: 10;
-    transform: perspective(1200px) translateZ(-6300px) translateX(-269px) translateY(-182px);
+    transform: perspective(1200px) translateZ(-8300px) translateX(-269px) translateY(-182px);
+    animation: ease-in-out turn_left_castle 6s forwards;
+    animation-delay: 7s;
   }
 
   .cloud3 {
     z-index: 10;
-    transform: perspective(1200px) translateZ(-6100px) translateX(180px) translateY(-290px);
-    animation: ease-in-out infinite turn_left_cloud3 15s;
+    transform: perspective(1200px) translateZ(-8100px) translateX(-1080px) translateY(-290px) rotateY(0deg);
+    animation: ease-in-out turn_left_cloud3 6s forwards;
+    animation-delay: 7s;
   }
 
   .tree1 {
     z-index: 10;
-    transform: perspective(1200px) translateZ(-8700px) translateX(-797px) translateY(-121px);
+    transform: perspective(1200px) translateZ(-12700px) translateX(-997px) translateY(-121px);
     filter: brightness(0.5);
-  }
-}
-
-@keyframes swing_room {
-  0% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(0) rotateY(0) rotateZ(0)
-  }
-
-  25% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(-1deg) rotateY(-1deg) rotateZ(-1deg)
-  }
-
-  50% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(0) rotateY(-2deg) rotateZ(0)
-  }
-
-  75% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(1deg) rotateY(2deg) rotateZ(1deg)
-  }
-
-  100% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(0) rotateY(0) rotateZ(0)
-  }
-}
-
-@keyframes zoom_pic {
-  0% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px);
-  }
-
-  50% {
-    transform: perspective(1200px) translateZ(1030px) translateY(70px);
-  }
-
-  /*100%{
-    transform: perspective(1200px) translateZ(1030px) translateY(70px);
-  }*/
-
-  100% {
-    transform: perspective(1200px) translateZ(100px) translateY(0px);
-  }
-}
-
-@keyframes turn_left_house1 {
-  0% {
-    transform: perspective(1200px) translateZ(-1450px) translateX(669px) translateY(167px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-1450px) translateX(669px) translateY(167px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-1450px) translateX(669px) translateY(167px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_house3 {
-  0% {
-    transform: perspective(1200px) translateZ(-2300px) translateX(-890px) translateY(35px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-2300px) translateX(-890px) translateY(35px) rotateY(10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-2300px) translateX(-890px) translateY(35px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_house2 {
-  0% {
-    transform: perspective(1200px) translateZ(-2500px) translateX(-619px) translateY(110px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-2500px) translateX(-619px) translateY(110px) rotateY(10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-2500px) translateX(-619px) translateY(110px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_house4 {
-  0% {
-    transform: perspective(1200px) translateZ(-4000px) translateX(700px) translateY(147px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-4000px) translateX(700px) translateY(147px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-4000px) translateX(700px) translateY(147px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_house5 {
-  0% {
-    transform: perspective(1200px) translateZ(-7600px) translateX(-600px) translateY(62px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-7600px) translateX(-600px) translateY(62px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-7600px) translateX(-600px) translateY(62px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_balloon1 {
-  0% {
-    transform: perspective(1200px) translateZ(-1200px) translateX(-83px) translateY(186px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-1200px) translateX(-183px) translateY(86px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-1200px) translateX(-83px) translateY(186px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_balloon2 {
-  0% {
-    transform: perspective(1200px) translateZ(-600px) translateX(930px) translateY(175px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-600px) translateX(1050px) translateY(150px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-600px) translateX(930px) translateY(175px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_cloud1 {
-  0% {
-    transform: perspective(1200px) translateZ(-540px) translateX(515px) translateY(-150px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-540px) translateX(1015px) translateY(-150px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-540px) translateX(515px) translateY(-150px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_cloud4 {
-  0% {
-    transform: perspective(1200px) translateZ(-2500px) translateX(-770px) translateY(-230px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-2500px) translateX(-270px) translateY(-230px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-2500px) translateX(-770px) translateY(-230px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_cloud3 {
-  0% {
-    transform: perspective(1200px) translateZ(-6100px) translateX(180px) translateY(-290px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-6100px) translateX(680px) translateY(-290px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-6100px) translateX(180px) translateY(-290px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_birds {
-  0% {
-    transform: perspective(1200px) translateZ(-3400px) translateX(710px) translateY(-90px) rotateY(0deg);
-  }
-  50% {
-    transform: perspective(1200px) translateZ(-2400px) translateX(1510px) translateY(-90px) rotateY(-10deg);
-  }
-  100% {
-    transform: perspective(1200px) translateZ(-3400px) translateX(710px) translateY(-90px) rotateY(0deg);
-  }
-}
-
-@keyframes turn_left_people3 {
-  0% {
-    transform: perspective(1200px) translateZ(-14900px) translateX(118px) translateY(414px) rotateY(0deg);
-  }
-
-  50% {
-    transform: perspective(1200px) translateZ(-16500px) translateX(100px) translateY(380px) rotateY(15deg);
-  }
-
-  100% {
-    transform: perspective(1200px) translateZ(-19500px) translateX(50px) translateY(340px) rotateY(-30deg);
+    animation: ease-in-out turn_left_tree1 6s forwards;
+    animation-delay: 7s;
   }
 }
