--- a/app/less/paint.less
+++ b/app/less/paint.less
@@ -21,13 +21,26 @@
     height: 768px;*/
     width: 45%;
     height: 647px;
-    background: url(../img/dest/fraim.webp) center center no-repeat no-repeat;
-    background-size: cover;
     transform-style: preserve-3d;
     transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(0) rotateY(0) rotateZ(0);
     overflow: hidden;
     box-shadow: 0 0 20px #7f7f7f;
     animation: linear 3s swing_room forwards;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      display: inline-block;
+      background: url(../img/dest/fraim.webp) center center no-repeat no-repeat;
+      background-size: cover;
+      width: 100%;
+      height: 100%;
+      z-index: 1000;
+    }
 
     .first_horizon {
       z-index: 1;
