--- a/app/less/paint.less
+++ b/app/less/paint.less
@@ -17,10 +17,10 @@
     z-index: 100;
     display: block;
     margin: 100px auto 0;
-    /*width: 1024px;
-    height: 768px;*/
-    width: 45%;
+    width: 864px;
     height: 647px;
+    /*width: 45%;
+    height: 647px;*/
     transform-style: preserve-3d;
     transform: perspective(1200px) translateZ(100px) translateY(0px) rotateX(0) rotateY(0) rotateZ(0);
     overflow: hidden;
